update domain name

--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@
             </li>
             <li>
               <strong>Website:</strong>
-              <span>www.mohansagar.me</span>
+              <span>www.mohansagar.website</span>
             </li>
             <li>
               <strong>Email:</strong>
-              <span>contact@mohansagar.me</span>
+              <span>contact@mohansagar.website</span>
             </li>
           </ul>
           <!-- /info-list -->
@@ -264,7 +264,7 @@
             >Hire Me</a
           >
           <a
-            href="https://www.mohansagar.me/Mohansagar_FrontendDeveloper.pdf"
+            href="https://mohansagark.github.io/mohansagar/Mohansagar_FrontendDeveloper.pdf"
             target="_blank"
             title="Download CV"
             class="button button-primary"
@@ -771,7 +771,7 @@
 
           <h5>Email Me At</h5>
 
-          <p>contact@mohansagar.me</p>
+          <p>contact@mohansagar.website</p>
         </div>
 
         <div class="col-four tab-full">
